name:                persistent-ref
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Adam C. Foltzer
maintainer:          acfoltzer@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  build-depends:     base == 4.6.*,
                     containers == 0.5.*
  exposed-modules:   Control.Monad.ST.Persistent,
                     Data.STRef.Persistent
  hs-source-dirs:    src