name:                persistent-refs
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Adam C. Foltzer
maintainer:          acfoltzer@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  build-depends:     base == 4.6.*,
                     containers == 0.5.*,
                     lens >= 3.7,
                     mtl  >= 2.1,
                     ref-fd >= 0.3,
                     transformers >= 0.3
  exposed-modules:   Control.Monad.ST.Persistent,
                     Data.STRef.Persistent
  other-modules:     Control.Monad.ST.Persistent.Internal
  hs-source-dirs:    src